# open-enroth-tc-llm

./: .gitignore  AI_GM_IMPLEMENTATION_NOTES.md
CMakeModules/: Dependencies.cmake
src/: CMakeLists.txt
src/Application/: Game.cpp
src/Application/Startup/: GameStarter.cpp  GameStarter.h
src/Engine/: CMakeLists.txt  Engine.cpp  EngineGlobals.cpp  EngineGlobals.h  MapInfo.h
src/Engine/Evt/: EvtProgram.cpp  EvtProgram.h
src/Engine/Graphics/: Outdoor.cpp  Outdoor.h
src/Engine/Objects/: ItemEnums.h
src/Engine/Snapshots/: CompositeSnapshots.cpp  CompositeSnapshots.h  EntitySnapshots.cpp  EntitySnapshots.h
src/Engine/Tables/: ItemTable.cpp  ItemTable.h  NPCTable.cpp  NPCTable.h
src/GUI/UI/: CMakeLists.txt  UIAIDialogue.cpp  UIAIDialogue.h
src/GUI/UI/Houses/: Transport.cpp  Transport.h
src/LLM/: CMakeLists.txt  GMState.h  GMTools.cpp  GMTools.h  compileLLMContext.cpp  compileLLMContext.h  google-api.cpp  google-api.h
src/Scripting/: ScriptingSystem.cpp  ScriptingSystem.h
